<resources>

    <!-- Labels used in application -->
    <!-- Written by: Gustavo Maturana -->
    <!-- file: strings.xml -->
    <!-- Date: November, 3, 2013 -->
    <string name="app_name">Grocery List</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Grocery LIST</string>
    <string name="recipe_btn_label">Recipes</string>
    <string name="search_btn_label">Store Search</string>
    <string name="edit_btn_label">Edit</string>
    <string name="desc">Description</string>
    <string name="list_name">List Title</string>
    <string name="about_label">About</string>
    <string name="recipe_author">Recipe Author</string>
    <string name="recipe_name">Name of Recipe</string>
    <string name="ok_button">OK</string>
    <string name="course">Course: CEN4020</string>
    <string name="group">Group: BAZINGA!</string>
    <string name="term">Term: Fall 2013</string>
    <string name="fsu">School: FSU</string>
    <string name="add_recipe_label">Add Recipe</string>
    <string name="add_item_label">Add Item</string>
    <string name="delete_item_label">Delete Item</string>
    <string name="mylist_label">My List</string>
    <string name="add_mylist_label">Add to My List</string>
    <string name="del_recipe_label">Delete Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="action_search">Search</string>
    <string name="update_list">Update List Name</string>
    <string name="ok_">OK</string>
    <string name="cancel_">Cancel</string>
    <string name="search_hint">Search</string>
    

</resources>