<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
        <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.support.v4.widget.SearchView"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/search_Store"
    	android:title="@string/search_btn_label"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/about"
    	android:title="@string/about_label"
        android:orderInCategory="100"
        android:showAsAction="never" android:actionLayout="@layout/about_layout" android:enabled="true"/>    
</menu>
