<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffffff">

    <Button
        android:id="@+id/button1"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/row_corners"
        android:textSize="12sp"
        android:textColor="#000000"
        android:drawableLeft="@drawable/edit"
        android:paddingLeft="120dip"
        android:paddingRight="100dip"
        android:layout_marginTop="17dp"
        android:text="@string/update_list"/>
        

    <Button
        android:id="@+id/button2"
        android:layout_width="130dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:background="@drawable/row_corners"
        android:textSize="12sp"
        android:textColor="#000000"
        android:drawableLeft="@drawable/yes"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:layout_marginTop="20dp"
        android:text="@string/ok_" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button1"
        android:background="@drawable/row_corners"
        android:textSize="12sp"
        android:textColor="#000000"
        android:drawableLeft="@drawable/no"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:text="@string/cancel_"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/list_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

</RelativeLayout>